# pyefa

./: LICENSE  README.md  examples.py  pyproject.toml
.github/workflows/: python-package.yml
pyefa/: __init__.py  client.py  data_classes.py  exceptions.py  helpers.py  requests.py  response.py
pyefa/requests/: req.py  req_departures.py  req_stop_finder.py  req_system_info.py  req_trips.py  schemas.py
tests/: test_helpers.py  test_requests.py
tests/requests/: test_req.py  test_req_departures.py  test_req_stop_finder.py  test_req_system_info.py
