[build-system]
requires = [
    "wheel",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyefa"
version = "2024.0.1"
requires-python = ">= 3.11"
description = "Retrive data from an EFA endpoint"
authors = [
  {name = "Alex Jung", email = "jungdevelop@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["efa", "vgn", "gtfs", "public transport", "traffic"]

dependencies = [
    "aiohttp==3.11.7",
    "voluptuous==0.15.2"
]

[project.optional-dependencies]
tests = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-benchmark[histogram]>=3.2.1'
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project.urls]
Homepage = "https://github.com/alex-jung/pyefa"
Documentation = "https://github.com/alex-jung/pyefa"
Repository = "https://github.com/alex-jung/pyefa"
Issues = "https://github.com/alex-jung/pyefa/issues"